# cs-148

./: .gitignore
bonus-project/: .gitignore
bonus-project/guidance/: bonus_project_full_guidelines.md  instructions.md
bonus-project/report/: asharma3_bonus_project.tex
bonus-project/results/: inference_timing.csv  params_results.csv  samples_results.csv
bonus-project/src/: benchmark_inference.py  collect_results.py  plot_scaling.py  sweep_params.sh  sweep_samples.sh  (+2 more)
hw1/: SETUP.md  arjunsharma_cs148a_hw1.tex  pyproject.toml  results.json
hw3/: arjunsharma_cs148a_hw2.tex  arjunsharma_cs148a_hw3.tex
hw4/: arjunsharma_cs148a_hw4.tex
project1a/: .gitignore  asharma3_report.tex  refs.bib
project1b/: asharma3_project1b_writeup.md
project2/: .gitignore  colab_training.ipynb  data.py  dataset.py  final_run.py  generate_dashboard.py  model.py  pipeline.py  pyproject.toml  run_augment_comparison.py  run_overnight.py  submission_template.py  test_pipeline.py  train.py  visualize_augmentations.py  visualize_embeddings.py  visualize_errors.py  visualize_val_pca.py
project2/report/: asharma3_cs148_project2.tex  refs.bib
project2/src/: dataset.py  final_run.py  generate_index.py  model.py  pipeline.py  plot_metrics.py  run_augment_comparison.py  run_grid_search.py  train.py  visualize_embeddings.py  visualize_errors.py  visualize_val_pca.py
project3/: .gitignore  exp1_vanilla.ipynb  exp2_distillation.ipynb  exp3_spt_lsa.ipynb  exp4_final.ipynb  guidance.md  pyproject.toml
project4/: .gitignore  CS148a_proj4_FM_starter.ipynb  count_params.py  pyproject.toml
(+55 files in other folders)
